--- a/index.html
+++ b/index.html
@@ -5,19 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    
     <title>TOBOOLIST</title>
 </head>
 <body>
     <!-- stesura header -->
     <header>
     <img class="header-logo"src="img/Logo.png" alt="Logo">
-     <h1 class="title-header">Toboolist</h1>
+     <h1 class="title-header"><strong>Toboolist</strong></h1>
     </header>
-
+    <!-- stesura main -->
     <main>
+        <section id="container">
 
 
 
+
+        </section>
 
 
 
