--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     
     <title>TOBOOLIST</title>
 </head>
@@ -16,12 +18,44 @@
     </header>
     <!-- stesura main -->
     <main>
-        <section id="container">
+        <div id="container">
+            <section class="container-margin">
+                <div class="button-1">Add Task</div>
+                <div class="button-2">Add Section</div>
+                <hr class="line-breaker">         </section>
 
+            <section class="container-margin">
 
+                <h2>&dtrif;New 
+                Task</h2>
+            <ol>
+                <li>&orslope; Quarterly Newsletter <div class="button-3">editorial</div></li>
+            </ol>
+            </section>
+            <section class="container-margin">
 
+            <h2>&dtrif;Today</h2>
+            <ol>
+                <li>&orslope; Recruiting blog post <div class="button-3">editorial</div></li>
+               <li>&orslope; Mobile app launch <div class="button-4">Q1 Goals</div> </li>
+               <li>&Otimes; Interview John H. <div class="button-5">recruiting</div></li>
+                <li>&orslope; Summit update to mobile storefronts <div class="button-6">mobile</div></li>
+                </ol>
+            </section>
+            <section class="container-margin">
 
-        </section>
+                <h2 class="title-upcoming">&dtrif;Upcoming</h2>
+                <ol>
+                <li>&Otimes; Schedule meeting with Alex</li>
+                <li>&orslope; Homepage refresh <div class="button-7">Website</div></li>
+                <li>&orslope; Onboard new Sales team members <div class="button-8"> Sales</div></li>
+                <li>&orslope; Review editorial calendar <div class="button-3">editorial</div></li>
+
+                </ol>
+
+            </section>
+
+        </div>
 
 
 
