--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <main>
         <div id="container">
             <section class="container-margin">
-                <div class="button-1">Add Task</div>
-                <div class="button-2">Add Section</div>
+                <button class="button-1">Add Task<button>
+                <button class="button-2">Add Section</button>
                 <hr class="line-breaker">         </section>
 
             <section class="container-margin">
