--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
     <!-- stesura header -->
     <header>
-    <img class="header-logo"src="img/Logo.png" alt="Logo">
+    <img class="header-logo" src="img/Logo.png" alt="Logo">
      <h1 class="title-header"><strong>Toboolist</strong></h1>
     </header>
     <!-- stesura main -->
     <main>
         <div id="container">
             <section class="container-margin">
-                <button class="button-1">Add Task<button>
+                <button class="button-1">Add Task</button> 
                 <button class="button-2">Add Section</button>
                 <hr class="line-breaker">         </section>
 
